Disable body overflow, no more flickering. Fix #2

--- a/css/application.css
+++ b/css/application.css
@@ -1,3 +1,6 @@
+body {
+    overflow: hidden;
+}
 #output {
   overflow: auto;
   max-height: 800px;
